--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
 .App {
   text-align: center;
-  padding: 2% 5%;
 }
 
 .App * {
@@ -37,8 +36,13 @@ input[type='number'] {
 #city-search {
   display: flex;
   flex-direction: column;
-  margin: auto;
+  margin-top: 20px;
+  margin-left: 50px;
   position: relative;
+}
+
+.description {
+  font-weight: 10;
 }
 
 .suggestions {
@@ -75,6 +79,14 @@ input[type='number'] {
   border: 1px solid #ccc;
   border-radius: 4px;
   position: relative;
+  width: 80%;
+}
+
+#event-list {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .details-btn {
@@ -90,7 +102,7 @@ input[type='number'] {
 .alerts-container {
   position: fixed;
   top: 0px;
-  left: 20px;
+  right: 30px;
   width: 250px;
   z-index: 1000;
 }
@@ -100,8 +112,50 @@ input[type='number'] {
   grid-template-columns: 1fr 1fr;
 }
 
+#number-of-events {
+  width: 50px;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 999;
+  border-bottom: solid;
+  border-color: #ccc;
+  display: flex;
+  padding-left: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 999;
+}
+
+.body {
+  margin-top: 150px;
+}
+
 @media (max-width: 950px) {
   .charts-container {
     grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 750px) {
+  .header {
+    flex-direction: column;
+    padding-right: 30px;
+    align-items: center;
+  }
+
+  #city-search {
+    margin-left: 0;
   }
 }
