--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
 .App {
   text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 
 .App * {
@@ -39,6 +40,11 @@ input[type='number'] {
   margin-top: 20px;
   margin-left: 50px;
   position: relative;
+}
+
+#city-search input {
+  margin-bottom: 0;
+  border: none;
 }
 
 .description {
@@ -87,6 +93,7 @@ input[type='number'] {
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin-bottom: 100px;
 }
 
 .details-btn {
@@ -128,6 +135,7 @@ input[type='number'] {
   padding-left: 30px;
   padding-top: 10px;
   padding-bottom: 10px;
+  align-items: center;
 }
 
 .footer {
@@ -140,6 +148,29 @@ input[type='number'] {
 
 .body {
   margin-top: 150px;
+}
+
+.search-container {
+  display: flex;
+  border: solid;
+  height: 45px;
+  align-items: center;
+  margin-bottom: 20px;
+  border-width: 1px;
+  padding: 3px 3px 3px 3px;
+  border-radius: 4px;
+  border-color: #ccc;
+}
+
+.icon {
+  height: 32px;
+  width: 32px;
+  margin-right: 5px;
+}
+
+.event-row {
+  display: flex;
+  align-items: center;
 }
 
 @media (max-width: 950px) {
